src/Bindings/Binaryen/Raw.hs


foreign import ccall unsafe "BinaryenConstGetValueI64High"
  constGetValueI64High ::
    Expression -> IO Int32

foreign import ccall unsafe "BinaryenConstGetValueF32"
  constGetValueF32 ::
    Expression -> IO CFloat

foreign import ccall unsafe "BinaryenConstGetValueF64"
  constGetValueF64 ::
    Expression -> IO CDouble

foreign import ccall unsafe "BinaryenConstGetValueV128"
  constGetValueV128 ::
    Expression -> Ptr Word8 -> IO ()

foreign import ccall unsafe "BinaryenUnaryGetOp"
  unaryGetOp ::
    Expression -> IO Op

foreign import ccall unsafe "BinaryenUnaryGetValue"
  unaryGetValue ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenBinaryGetOp"
  binaryGetOp ::
    Expression -> IO Op

foreign import ccall unsafe "BinaryenBinaryGetLeft"
  binaryGetLeft ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenBinaryGetRight"
  binaryGetRight ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenSelectGetIfTrue"
  selectGetIfTrue ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenSelectGetIfFalse"
  selectGetIfFalse ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenSelectGetCondition"
  selectGetCondition ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenDropGetValue"
  dropGetValue ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenReturnGetValue"
  returnGetValue ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenAtomicRMWGetOp"
  atomicRMWGetOp ::
    Expression -> IO Op

foreign import ccall unsafe "BinaryenAtomicRMWGetBytes"
  atomicRMWGetBytes ::
    Expression -> IO Word32

foreign import ccall unsafe "BinaryenAtomicRMWGetOffset"
  atomicRMWGetOffset ::
    Expression -> IO Word32

foreign import ccall unsafe "BinaryenAtomicRMWGetPtr"
  atomicRMWGetPtr ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenAtomicRMWGetValue"
  atomicRMWGetValue ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenAtomicCmpxchgGetBytes"
  atomicCmpxchgGetBytes ::
    Expression -> IO Word32

foreign import ccall unsafe "BinaryenAtomicCmpxchgGetOffset"
  atomicCmpxchgGetOffset ::
    Expression -> IO Word32

foreign import ccall unsafe "BinaryenAtomicCmpxchgGetPtr"
  atomicCmpxchgGetPtr ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenAtomicCmpxchgGetExpected"
  atomicCmpxchgGetExpected ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenAtomicCmpxchgGetReplacement"
  atomicCmpxchgGetReplacement ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenAtomicWaitGetPtr"
  atomicWaitGetPtr ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenAtomicWaitGetExpected"
  atomicWaitGetExpected ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenAtomicWaitGetTimeout"
  atomicWaitGetTimeout ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenAtomicWaitGetExpectedType"
  atomicWaitGetExpectedType ::
    Expression -> IO Type

foreign import ccall unsafe "BinaryenAtomicNotifyGetPtr"
  atomicNotifyGetPtr ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenAtomicNotifyGetNotifyCount"
  atomicNotifyGetNotifyCount ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenAtomicFenceGetOrder"
  atomicFenceGetOrder ::
    Expression -> IO Word8

foreign import ccall unsafe "BinaryenSIMDExtractGetOp"
  simdExtractGetOp ::
    Expression -> IO Op

foreign import ccall unsafe "BinaryenSIMDExtractGetVec"
  simdExtractGetVec ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenSIMDExtractGetIndex"
  simdExtractGetIndex ::
    Expression -> IO Word8

foreign import ccall unsafe "BinaryenSIMDReplaceGetOp"
  simdReplaceGetOp ::
    Expression -> IO Op

foreign import ccall unsafe "BinaryenSIMDReplaceGetVec"
  simdReplaceGetVec ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenSIMDReplaceGetIndex"
  simdReplaceGetIndex ::
    Expression -> IO Word8

foreign import ccall unsafe "BinaryenSIMDReplaceGetValue"
  simdReplaceGetValue ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenSIMDShuffleGetLeft"
  simdShuffleGetLeft ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenSIMDShuffleGetRight"
  simdShuffleGetRight ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenSIMDShuffleGetMask"
  simdShuffleGetMask ::
    Expression -> Ptr Word8 -> IO ()

foreign import ccall unsafe "BinaryenSIMDTernaryGetOp"
  simdTernaryGetOp ::
    Expression -> IO Op

foreign import ccall unsafe "BinaryenSIMDTernaryGetA"
  simdTernaryGetA ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenSIMDTernaryGetB"
  simdTernaryGetB ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenSIMDTernaryGetC"
  simdTernaryGetC ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenSIMDShiftGetOp"
  simdShiftGetOp ::
    Expression -> IO Op

foreign import ccall unsafe "BinaryenSIMDShiftGetVec"
  simdShiftGetVec ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenSIMDShiftGetShift"
  simdShiftGetShift ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenSIMDLoadGetOp"
  simdLoadGetOp ::
    Expression -> IO Op

foreign import ccall unsafe "BinaryenSIMDLoadGetOffset"
  simdLoadGetOffset ::
    Expression -> IO Word32

foreign import ccall unsafe "BinaryenSIMDLoadGetAlign"
  simdLoadGetAlign ::
    Expression -> IO Word32

foreign import ccall unsafe "BinaryenSIMDLoadGetPtr"
  simdLoadGetPtr ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenMemoryInitGetSegment"
  memoryInitGetSegment ::
    Expression -> IO Word32

foreign import ccall unsafe "BinaryenMemoryInitGetDest"
  memoryInitGetDest ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenMemoryInitGetOffset"
  memoryInitGetOffset ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenMemoryInitGetSize"
  memoryInitGetSize ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenDataDropGetSegment"
  dataDropGetSegment ::
    Expression -> IO Word32

foreign import ccall unsafe "BinaryenMemoryCopyGetDest"
  memoryCopyGetDest ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenMemoryCopyGetSource"
  memoryCopyGetSource ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenMemoryCopyGetSize"
  memoryCopyGetSize ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenMemoryFillGetDest"
  memoryFillGetDest ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenMemoryFillGetValue"
  memoryFillGetValue ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenMemoryFillGetSize"
  memoryFillGetSize ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenRefIsNullGetValue"
  refIsNullGetValue ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenRefFuncGetFunc"
  refFuncGetFunc ::
    Expression -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenTryGetBody"
  tryGetBody ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenTryGetCatchBody"
  tryGetCatchBody ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenThrowGetEvent"
  throwGetEvent ::
    Expression -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenThrowGetOperand"
  throwGetOperand ::
    Expression -> Index -> IO Expression

foreign import ccall unsafe "BinaryenThrowGetNumOperands"
  throwGetNumOperands ::
    Expression -> IO Index

foreign import ccall unsafe "BinaryenRethrowGetExnref"
  rethrowGetExnref ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenBrOnExnGetEvent"
  brOnExnGetEvent ::
    Expression -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenBrOnExnGetName"
  brOnExnGetName ::
    Expression -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenBrOnExnGetExnref"
  brOnExnGetExnref ::
    Expression -> IO Expression

foreign import ccall unsafe "BinaryenPushGetValue"
  pushGetValue ::
    Expression -> IO Expression

newtype Function = Function (Ptr Function)
  deriving (Eq, Show)

foreign import ccall unsafe "BinaryenAddFunction"
  addFunction ::
    Module ->
    Ptr CChar ->
    Type ->
    Type ->
    Ptr Type ->
    Index ->
    Expression ->
    IO Function

foreign import ccall unsafe "BinaryenGetFunction"
  getFunction ::
    Module -> Ptr CChar -> IO Function

foreign import ccall unsafe "BinaryenRemoveFunction"
  removeFunction ::
    Module -> Ptr CChar -> IO ()

foreign import ccall unsafe "BinaryenGetNumFunctions"
  getNumFunctions ::
    Module -> IO Word32

foreign import ccall unsafe "BinaryenGetFunctionByIndex"
  getFunctionByIndex ::
    Module -> Index -> IO Function

foreign import ccall unsafe "BinaryenAddFunctionImport"
  addFunctionImport ::
    Module ->
    Ptr CChar ->
    Ptr CChar ->
    Ptr CChar ->
    Type ->
    Type ->
    IO ()

foreign import ccall unsafe "BinaryenAddTableImport"
  addTableImport ::
    Module ->
    Ptr CChar ->
    Ptr CChar ->
    Ptr CChar ->
    IO ()

foreign import ccall unsafe "BinaryenAddMemoryImport"
  addMemoryImport ::
    Module ->
    Ptr CChar ->
    Ptr CChar ->
    Ptr CChar ->
    Word8 ->
    IO ()

foreign import ccall unsafe "BinaryenAddGlobalImport"
  addGlobalImport ::
    Module ->
    Ptr CChar ->
    Ptr CChar ->
    Ptr CChar ->
    Type ->
    CInt ->
    IO ()

foreign import ccall unsafe "BinaryenAddEventImport"
  addEventImport ::
    Module ->
    Ptr CChar ->
    Ptr CChar ->
    Ptr CChar ->
    Word32 ->
    Type ->
    Type ->
    IO ()

newtype Export = Export (Ptr Export)
  deriving (Eq, Show)

foreign import ccall unsafe "BinaryenAddFunctionExport"
  addFunctionExport ::
    Module -> Ptr CChar -> Ptr CChar -> IO Export

foreign import ccall unsafe "BinaryenAddTableExport"
  addTableExport ::
    Module -> Ptr CChar -> Ptr CChar -> IO Export

foreign import ccall unsafe "BinaryenAddMemoryExport"
  addMemoryExport ::
    Module -> Ptr CChar -> Ptr CChar -> IO Export

foreign import ccall unsafe "BinaryenAddGlobalExport"
  addGlobalExport ::
    Module -> Ptr CChar -> Ptr CChar -> IO Export

foreign import ccall unsafe "BinaryenAddEventExport"
  addEventExport ::
    Module -> Ptr CChar -> Ptr CChar -> IO Export

foreign import ccall unsafe "BinaryenRemoveExport"
  removeExport ::
    Module -> Ptr CChar -> IO ()

newtype Global = Global (Ptr Global)
  deriving (Eq, Show)

foreign import ccall unsafe "BinaryenAddGlobal"
  addGlobal ::
    Module ->
    Ptr CChar ->
    Type ->
    Int8 ->
    Expression ->
    IO Global

foreign import ccall unsafe "BinaryenGetGlobal"
  getGlobal ::
    Module -> Ptr CChar -> IO Global

foreign import ccall unsafe "BinaryenRemoveGlobal"
  removeGlobal ::
    Module -> Ptr CChar -> IO ()

newtype Event = Event (Ptr Event)
  deriving (Eq, Show)

foreign import ccall unsafe "BinaryenAddEvent"
  addEvent ::
    Module ->
    Ptr CChar ->
    Word32 ->
    Type ->
    Type ->
    IO Event

foreign import ccall unsafe "BinaryenGetEvent"
  getEvent ::
    Module -> Ptr CChar -> IO Event

foreign import ccall unsafe "BinaryenRemoveEvent"
  removeEvent ::
    Module -> Ptr CChar -> IO ()

foreign import ccall unsafe "BinaryenSetFunctionTable"
  setFunctionTable ::
    Module ->
    Index ->
    Index ->
    Ptr (Ptr CChar) ->
    Index ->
    Expression ->
    IO ()

foreign import ccall unsafe "BinaryenIsFunctionTableImported"
  isFunctionTableImported ::
    Module -> IO CInt

foreign import ccall unsafe "BinaryenGetNumFunctionTableSegments"
  getNumFunctionTableSegments ::
    Module -> IO Index

foreign import ccall unsafe "BinaryenGetFunctionTableSegmentOffset"
  getFunctionTableSegmentOffset ::
    Module -> Index -> IO Expression
